# peneira

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
blog/: index.html
blog/2024/01/19/olá-mundo/: index.html
blog/archive/2024/: index.html
blog/category/hello-world/: index.html
configuracoes/: index.html
crawler/: index.html
docs/: configuracoes.md  crawler.md  formacao-urls.md  index.md  paginas_raspagem.md
docs/blog/: .authors.yml
docs/blog/posts/: olamundo.md  refrescos.md
docs/site/: 404.html  index.html  sitemap.xml
docs/site/blog/: index.html
docs/site/blog/2024/01/19/olá-mundo/: index.html
docs/site/blog/archive/2024/: index.html
docs/site/blog/category/hello-world/: index.html
docs/site/configuracoes/: index.html
docs/site/paginas_raspagem/: index.html
formacao-urls/: index.html
peneira/: output.csv  scrapy.cfg
peneira/peneira/: items.py  middlewares.py  pipelines.py  settings.py
peneira/peneira/spiders/: peneirao_spider.py
peneira/tests/: conftest.py  test_pipelines.py  test_spider.py  turns.json
