[tool.poetry]
name = "peneira"
version = "0.1.0"
description = "crawler para raspar ascompetições femininas de futebol do brasil"
authors = ["Marina Caponera <m.caponera@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
scrapy = "^2.12.0"
mkdocs-material = "^9.5.50"
dateparser = "^1.2.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.31.0"
ruff = "^0.9.2"

[tool.ruff]
line-length = 79
extend-exclude = ['mkdocs.yml', 'docs']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
