[project]
authors = [
    {name = "Marina Caponera", email = "m.caponera@gmail.com"},
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "scrapy<3.0.0,>=2.12.0",
    "mkdocs-material<10.0.0,>=9.5.50",
    "dateparser<2.0.0,>=1.2.0",
    "itemadapter>=0.11.0",
    "pytest-cov>=6.0.0",
    "pydantic>=2.10.6",
]
name = "peneira"
version = "0.1.0"
description = "crawler para raspar ascompetições femininas de futebol do brasil"
readme = "README.md"

[dependency-groups]
dev = [
    "ipython<9.0.0,>=8.31.0",
    "ruff<1.0.0,>=0.9.2",
]

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.ruff]
line-length = 79
extend-exclude = ['mkdocs.yml', 'docs']
exclude = ['peneira/peneira/settings.py']

[tool.ruff.lint]
preview = false
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = false
quote-style = 'single'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

